--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "http://mikegshelby.github.io/photo-port",
   "name": "photo-port",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.1",
