updated package.json to use an older version of react-scripts, ^3.4.1, rather than latest version. This fixed problem with images not displaying in photo gallery

--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "homepage": "https://mikegshelby.github.io/photo-port",
+  "homepage": "http://mikegshelby.github.io/photo-port",
   "name": "photo-port",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
-    "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.0"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,8 +18,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
